added supported for team bundles and Fifa Club World Cup